Latest career update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         
         <div style="display: flex;flex-direction: column;justify-content:center;min-height: 233.5;" class="mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-8-tablet">
           <h2 style="text-align:center;margin: 0;">Dmitrijus Drozdovas</h2>
-          <h3 style="text-align:center;margin:0;">Software Developer</h3>
         </div>
         
         <div class="mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-8-tablet" style="display:flex;align-items:center">
@@ -90,11 +89,9 @@
                   </g>
                 </svg>
               </div>
-              Career
+              Software Developer
             </h3>
-            <p>Since 2013 I've been working as a full-stack developer. Currently working as a Derivatives Technologist at 
-              <a href="http://www.bgcpartners.com/" target="_blank">BGC</a>. Where my primary role was is to breakdown monolith .Net applications and create 
-              Java microservices around them with simple React management UIs.</p>
+            <p>Since 2013 I've been working as a full-stack developer. Currently working as Senior Java Developer at <a href="http://www.citi.com/" target="_blank">Citi</a>. </p>
           </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
