--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                   </g>
                 </svg>
               </div>
-              Software Developer
+              Software Dev
             </h3>
-            <p>Since 2013 I've been working as a full-stack developer. Currently working as Senior Java Developer at <a href="http://www.citi.com/" target="_blank">Citi</a>. </p>
+            <p>Since 2013 I've been working as a full-stack developer. Currently working as a Senior Java Developer at <a href="http://www.citi.com/" target="_blank">Citi</a>. </p>
           </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
