Added 2 new blog posts

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
           </h4>
           
           <ul style="padding-left: 1em;">
+            <li><a href="https://drozdovas.com/blog/2022/syhc.html">Should you have a child?</a></li>
+            <li><a href="https://drozdovas.com/blog/2022/acl.html">A Comfortable Life</a></li>
             <li><a href="https://drozdovas.com/blog/2022/mcr.html">Market Crash - Recession</a></li>
             <li><a href="https://drozdovas.com/blog/2022/hw.html">Hello World!</a></li>
           </ul>
