Added new blog post - minimalism

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
           </h4>
           
           <ul style="padding-left: 1em;">
+            <li><a href="https://drozdovas.com/blog/2022/m.html">Minimalism</a></li>
             <li><a href="https://drozdovas.com/blog/2022/jdi.html">Just Do It!</a></li>
             <li><a href="https://drozdovas.com/blog/2022/syhc.html">Should you have a child?</a></li>
             <li><a href="https://drozdovas.com/blog/2022/acl.html">A Comfortable Life</a></li>
